# Imbriqua_Structure_Loader

./: .gitattributes  .gitignore  Cargo.toml  README.MD  README.md  TODO.md  WIKI.md  config_log.yml
cmof_class/: BPMN20.cmof
doc/: all.html  custom_file_tools.md  custom_log_tools.md  fn.main.html  index.html  loader_cmof_structure.md  loader_deserialise_helper.md  module_dependencies_explorer.md  module_deserialise_helper.md  module_file_env.md  module_file_manager.md  module_log.md  module_output_checker.md  module_write_objects.md  output_cargo_checker.md  output_result_manager.md  search-index.js  sidebar-items.js  src-files.js  writing_entity.md  writing_lib_file.md  writing_manager.md  writing_mod_file.md  writing_mod_objects.md
metamodel_file/: 010_di_metamodel.cmof  020_dc_metamodel.cmof  030_bpmn_metamodel.cmof  040_bpmn_di_metamodel.cmof  BPMN20.cmof  BPMN20.json  BPMNDI.cmof  BPMNDI.json  DC.cmof  DC.json  DI.cmof  DI.json  Extensibility.json
metamodel_file_extension/: enumeration_default_value.json  primitive_type_conversion.json
metamodel_file_raw/: BPMN20.cmof  BPMN20.json  BPMNDI.cmof  BPMNDI.json  DC.json  DI.cmof  DI.json
resource/: COPYRING.MD
src/: config_log.yml  custom_file_tools.rs  custom_log_tools.rs  loader_cmof_structure.rs  loader_dependencies_explorer.rs  loader_deserialise_helper.rs  loader_naming_for_breemap.rs  loader_naming_trait.rs  loader_post_treament_deserialize.rs  main.rs  module_cmof_conversion.rs  module_cmof_structure.rs  module_dependencies_explorer.rs  module_deserialise_helper.rs  module_element_conversion.rs  module_file_config.rs  module_file_env.rs  module_file_manager.rs  module_file_output.rs  module_load_classes.rs  module_log.rs  module_output_checker.md  module_output_checker.rs  module_result_check.rs  module_result_checker.rs  module_rust_struct_exporter.rs  module_write_control.rs  module_write_lib.rs  module_write_mod.rs  module_write_mods.rs  module_write_objects.rs  module_writing_preparation.rs  output_cargo_checker.rs  output_result_manager.rs  result_manager.rs  writing_entity.rs  writing_lib_file.rs  writing_manager.rs  writing_mod_file.rs  writing_mod_object.old  (+2 more)
template/: entity_association_main.tmpl  entity_class_main.tmpl  entity_class_part_1.tmpl  entity_class_part_2.tmpl  entity_class_part_3.tmpl  entity_datatype_main.tmpl  entity_datatype_part_1.tmpl  entity_datatype_part_3.tmpl  entity_enumeration_part_1.tmpl  entity_enumeration_part_2.tmpl  entity_enumeration_part_3.tmpl  entity_field_part_2.tmpl  entity_main_association.tmpl  entity_main_class.tmpl  entity_main_enumeration.tmpl  entiy_field_1.tmpl  (+10 more)
(+230 files in other folders)
