[package]
name = "imbriqua_structure_loader"
version = "0.1.0"
authors = ["Marc Chatroux <marc38.chatroux@free.fr>"]
edition = "2021"
rust-version = "1.77.0"
description = "Imbriqua Structure Loader : Interpreter of BPMN model files (in UML notation) for Imbriqua Engine project"
documentation = ""
readme = "README.MD"
homepage = ""
repository = ""
license="GPL-3.0-only"
keywords = ["BPMN", "metacode", "metamodel", "business", "model"]
categories = ["compilers", "data-structures", "science", "network-programming", "visualization"]
include = ["/doc", "/examples", "/metamodel_file", "/src", "/tests", "config_log.yml", "LICENSE.MD", "README.MD"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
log = "0.4.21"
log4rs = "1.3.0"
serde_yaml = "0.9.34"
chrono = "0.4.37"
minidom="0.15.2"
fs_extra="1.3.0"