[package]
name = "imbriqua_structure_loader"
version = "0.1.0"
authors = ["Marc Chatroux <marc38.chatroux@free.fr>"]
edition = "2021"
rust-version = "1.77.0"
description = "Imbriqua Structure Loader : Interpreter of BPMN model files (in UML notation) for Imbriqua Engine project"
documentation = ""
readme = "README.MD"
homepage = ""
repository = ""
license="GPL-3.0-only"
keywords = ["BPMN", "metacode", "metamodel", "business", "model"]
categories = ["compilers", "data-structures", "science", "network-programming", "visualization"]
include = ["/doc", "/examples", "/metamodel_file", "/src", "/tests", "config_log.yml", "LICENSE.MD", "README.MD"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
chrono = "0.4.37"
convert_case="0.8.0"
fs_extra="1.3.0"
infinitable="1.6.0"
lazy_static="1.4.0"
log = "0.4.21"
log4rs = "1.3.0"
serde= "1.0.200"
serde_json = "1.0.116"
serde_yaml = "0.9.34"
xmi_tools = {path = "xmi_tools"}
xmi_tools_derive = {path = "xmi_tools/xmi_tools_derive"}

[profile.release]
debug = true
